--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,19 +12,18 @@ description = "Chinese Animal Chess"
 readme = {file = "README.md", content-type = "text/markdown"}
 license = {text = "MIT"}
 keywords = ["animal chess", "pygame"]
-requires-python = ">=3.10"
+requires-python = ">=3.11"
 classifiers = [
     "Topic :: Scientific/Engineering :: Mathematics",
     "License :: OSI Approved :: MIT License",
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: Software Development :: Version Control :: Git",
-    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
     "Intended Audience :: Developers",
 ]
-dependencies = ["numpy", "pygame"]
+dependencies = ["numpy", "pygame", "loguru"]
 
 [project.urls]
 Repository = "https://github.com/stephenhky/ChineseAnimalChess"
