--- a/.gitignore
+++ b/.gitignore
@@ -484,3 +484,5 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+# Visual studio code
+.vscode
