--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "animalchess"
-version = "0.0.1a1"
+version = "0.0.1"
 authors = [
     {name = "Kwan Yuet Stephen Ho", email = "stephenhky@yahoo.com.hk"}
 ]
@@ -23,7 +23,7 @@ classifiers = [
     "Programming Language :: Python :: 3.13",
     "Intended Audience :: Developers",
 ]
-dependencies = ["numpy", "pygame", "loguru"]
+dependencies = ["numpy", "loguru"]
 
 [project.urls]
 Repository = "https://github.com/stephenhky/ChineseAnimalChess"
