--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ authors = [
 description = "Chinese Animal Chess"
 readme = {file = "README.md", content-type = "text/markdown"}
 license = {text = "MIT"}
-keywords = ["animal chess", "pygame"]
+keywords = ["animal chess"]
 requires-python = ">=3.11"
 classifiers = [
     "Topic :: Scientific/Engineering :: Mathematics",
